@@ -89,7 +89,6 @@
         <configuration>
           <source>18</source>
           <target>18</target>
-          <compilerArgs>--enable-preview</compilerArgs>
           <compilerArgument>-Xlint:deprecation</compilerArgument>
           <compilerArgument>-Xlint:unchecked</compilerArgument>
         </configuration>
